test/should-fail/jfxc4173c.visage
/**
 * Regress test for JFXC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=lambda
 * @compile jfxc4173sub.visage
 * @test/warning
 */
